--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,20 @@ template {
   display: none;
 }
 
+/* ul */
+/* xl */
+/* lg */
+/* md */
+/* sm */
+/* xs */
+/* xx */
+.header-menu__container, .header-content__container {
+  max-width: 1340px;
+  margin: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -348,23 +362,22 @@ template {
 
 html {
   overflow-y: scroll;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
   letter-spacing: 0.1em;
   color: #637588;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
 }
 
 h1 {
-  font-size: 3.75rem;
   letter-spacing: 0.08em;
-  font-weight: 300;
   font-family: "Roboto Slab", serif;
+  font-weight: 300;
   line-height: 1.2em;
 }
 
 a {
-  color: #ffffff;
   text-decoration: none;
+  color: #ffffff;
 }
 
 .btn {
@@ -377,12 +390,10 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 60px;
-  font-size: 1.125rem;
-  letter-spacing: 0.1em;
   -webkit-transition: background-color 0.5s;
   -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
+  letter-spacing: 0.1em;
 }
 
 .btn:hover, .btn:focus {
@@ -390,67 +401,58 @@ a {
 }
 
 .btn--light {
-  min-width: 250px;
-  background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .btn--primary {
-  min-width: 350px;
-  background-color: rgba(45, 54, 81, 0.8);
+  height: 60px;
   border: 2px solid #2d3651;
+  background-color: rgba(45, 54, 81, 0.8);
 }
 
 .header {
   position: relative;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
   min-height: 100vh;
+  padding: 100px 0;
   color: #ffffff;
   background-color: #2d3651;
   background-position: center;
   background-size: cover;
-  padding: 100px 0;
-  display: grid;
-  -ms-flex-line-pack: center;
-      align-content: center;
 }
 
 .header-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   opacity: 0.8;
   background-color: #2d3651;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .header-menu {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
   z-index: 1;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .header-menu__container {
   display: grid;
-  grid-template-columns: auto 1fr;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.header-menu__container,
-.header-content__container {
-  max-width: 1340px;
-  margin: auto;
-  padding-right: 20px;
-  padding-left: 20px;
+  grid-template-columns: auto 1fr;
 }
 
 .header-logo {
-  font-size: 24px;
   letter-spacing: 0.22em;
+  font-size: 24px;
   /* background-color: rgb(124, 102, 144); */
 }
 
@@ -461,9 +463,9 @@ a {
 
 .header-logo__accent {
   display: inline-block;
-  border: 3px solid #d53d27;
-  padding: 14px 1px 13px 5px;
   margin-right: 4px;
+  padding: 14px 1px 13px 5px;
+  border: 3px solid #d53d27;
 }
 
 .header-navbar {
@@ -471,23 +473,106 @@ a {
 }
 
 .header-navbar__btn {
-  display: none;
+  width: 30px;
+  height: 22.5px;
+  position: relative;
+  margin: 20px 0;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.header-navbar__btn-row {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 50%;
+  background: #ffffff;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+.header-navbar__btn-row:nth-child(even) {
+  left: 50%;
+  border-radius: 0 3px 3px 0;
+}
+
+.header-navbar__btn-row:nth-child(odd) {
+  left: 0px;
+  border-radius: 3px 0 0 3px;
+}
+
+.header-navbar__btn-row:nth-child(1), .header-navbar__btn-row:nth-child(2) {
+  top: 0px;
+}
+
+.header-navbar__btn-row:nth-child(3), .header-navbar__btn-row:nth-child(4) {
+  top: 9px;
+}
+
+.header-navbar__btn-row:nth-child(5), .header-navbar__btn-row:nth-child(6) {
+  top: 18px;
+}
+
+.header-navbar__btn.active span:nth-child(1), .header-navbar__btn.active span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.header-navbar__btn.active span:nth-child(2), .header-navbar__btn.active span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.header-navbar__btn.active span:nth-child(1) {
+  left: 2.5px;
+  top: 3.5px;
+}
+
+.header-navbar__btn.active span:nth-child(2) {
+  left: calc(50% - 2.5px);
+  top: 3.5px;
+}
+
+.header-navbar__btn.active span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+.header-navbar__btn.active span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+.header-navbar__btn.active span:nth-child(5) {
+  left: 2.5px;
+  top: 14.5px;
+}
+
+.header-navbar__btn.active span:nth-child(6) {
+  left: calc(50% - 2.5px);
+  top: 14.5px;
 }
 
 .header-navbar__list {
-  list-style: none;
   margin: 0 -20px 0 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
-  grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  list-style: none;
 }
 
-.header-navbar__item {
-  margin: 0 10px;
+.header-navbar__list.active {
+  display: block;
 }
 
 .header-navbar__link {
@@ -500,7 +585,7 @@ a {
   transition: color 0.5s;
 }
 
-.header-navbar:hover, .header-navbar:focus {
+.header-navbar__link:hover, .header-navbar__link:focus {
   color: #d66926;
 }
 
@@ -511,29 +596,22 @@ a {
 
 .header-content__title {
   text-align: center;
-  margin: 0 0 53px 0;
 }
 
 .header-content__actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.skills {
-  padding: 10px;
-  margin-bottom: 30px;
+  gap: 20px;
 }
 
 .skills__container {
   display: grid;
-  grid-template-areas: "art1 art1 art2 art3" "art4 art5 art5 art6" "art7 art8 art9 art6";
-  gap: 10px;
   margin-bottom: 20px;
+  gap: 10px;
 }
 
 .skills__actions {
@@ -546,8 +624,8 @@ a {
 }
 
 .skill-item {
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
 }
 
 .skill-item:hover .skill-item__overlay {
@@ -565,57 +643,56 @@ a {
 }
 
 .skill-item__overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
   z-index: 1;
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s;
-}
-
-.skill-item__image {
   position: absolute;
-  left: 0;
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: #2d3651;
-  background-position: center;
-  background-size: cover;
+  left: 0;
+}
+
+.skill-item__image {
   -webkit-transition: -webkit-transform 0.5s;
   transition: -webkit-transform 0.5s;
   -o-transition: transform 0.5s;
   transition: transform 0.5s;
   transition: transform 0.5s, -webkit-transform 0.5s;
-}
-
-.skill-item__title {
+  background-color: #2d3651;
+  background-position: center;
+  background-size: cover;
   position: absolute;
-  left: 0;
   top: 0;
   right: 0;
   bottom: 0;
-  margin: 0;
+  left: 0;
+}
+
+.skill-item__title {
   z-index: 2;
-  font-size: 1.25rem;
+  margin: 0;
   letter-spacing: 0.1em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .skill-item__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
+  height: 100%;
   padding: 20px;
   -webkit-transition: color 0.5s;
   -o-transition: color 0.5s;
@@ -658,34 +735,145 @@ a {
   grid-area: art9;
 }
 
-@media (min-height: 641px) {
-  .skill-item {
-    min-height: calc(33.333vh - 40px / 3);
+@media (min-width: 576px) {
+  .btn--primary {
+    min-width: 350px;
+  }
+  .skills {
+    margin-bottom: 30px;
+    padding: 10px;
   }
 }
 
-@media (max-width: 992px) {
+@media (min-height: 641px) {
+  .skills__container {
+    grid-auto-rows: calc(33.333vh - 40px / 3);
+  }
+}
+
+@media (min-width: 768px) {
+  .header-navbar__btn {
+    display: none;
+  }
+  .header-navbar__list {
+    display: grid !important;
+    grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
+    grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+  }
+  .header-navbar__item {
+    margin: 0 10px;
+  }
+  .skill-item__title {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 992px) {
+  h1 {
+    font-size: 3.75rem;
+  }
+  .btn--light {
+    min-width: 250px;
+    height: 60px;
+    font-size: 1.125rem;
+  }
+  .header-content__title {
+    margin: 0 0 53px 0;
+  }
+  .skills__container {
+    grid-template-areas: "art1 art1 art2 art3" "art4 art5 art5 art6" "art7 art8 art9 art6";
+  }
+}
+
+@media (max-width: 991.8px) and (min-width: 768px) {
   h1 {
     font-size: 2.5rem;
   }
+  .btn--light {
+    min-width: 200px;
+    height: 50px;
+    font-size: 1rem;
+  }
   .header-content__title {
-    text-align: center;
     margin: 0 0 43px 0;
+  }
+  .skills__container {
+    grid-template-areas: "art1 art1 art2" "art3 art4 art4" "art5 art5 art6" "art7 art8 art6" "art7 art9 art9";
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767.8px) {
   h1 {
     font-size: 1.875rem;
   }
+  .btn--light {
+    min-width: 170px;
+    height: 40px;
+    font-size: 1rem;
+  }
+  .header-menu {
+    background-color: rgba(68, 89, 110, 0.25);
+  }
+  .header-navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .header-navbar__list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 40px;
+    text-align: right;
+    background-color: rgba(68, 89, 110, 0.9);
+  }
+  .header-navbar__item {
+    margin: 20px;
+  }
   .header-content__title {
-    text-align: center;
     margin: 0 0 33px 0;
+  }
+  .skill-item__title {
+    font-size: 1.125rem;
+  }
+}
+
+@media (max-width: 767.8px) and (min-width: 576px) {
+  .skills__container {
+    grid-template-areas: "art1 art2" "art3 art2" "art4 art4" "art5 art6" "art5 art7" "art8 art9";
   }
 }
 
 @media (max-height: 641px) {
-  .skill-item {
-    min-height: 200px;
+  .skills__container {
+    grid-auto-rows: 200px;
+  }
+}
+
+@media (max-width: 575.8px) {
+  .btn--primary {
+    width: 100%;
+  }
+  .header-content__actions {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .skills {
+    padding: 20px;
+  }
+  .skills__container {
+    gap: 20px;
+    grid-template-areas: "art1 " "art2 " "art3 " "art4 " "art5 " "art6 " "art7 " "art8 " "art9 ";
   }
 }
