--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -1,18 +1,22 @@
 .header-logo {
-  font-size: 24px;
   letter-spacing: 0.22em;
+
+  font-size: 24px;
   /* background-color: rgb(124, 102, 144); */
 
   &__link {
     display: block;
-    padding: 20px 20px 20px 0;
+
+    padding: $gap $gap $gap 0;
   }
-  
+
   &__accent {
     display: inline-block;
-    border: 3px solid #d53d27;
-    padding: 14px 1px 13px 5px;
+
     margin-right: 4px;
+    padding: 14px 1px 13px 5px;
+
+    border: 3px solid #d53d27;
   }
 }
 
