--- a/assets/scss/header/_header-navbar.scss
+++ b/assets/scss/header/_header-navbar.scss
@@ -1,21 +1,130 @@
 .header-navbar {
   /* background-color: rgb(43, 159, 226); */
 
+  @include md {
+    display: flex;
+    justify-content: flex-end;
+  }
   &__btn {
-    display: none;
+    @include md-min {
+      display: none;
+    }
+
+    width: 30px;
+    height: 22.5px;
+    position: relative;
+    margin: 20px 0;
+    transform: rotate(0deg);
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+
+    &-row {
+      display: block;
+      position: absolute;
+      height: 3px;
+      width: 50%;
+      background: $color-light;
+      opacity: 1;
+      transform: rotate(0deg);
+      transition: 0.25s ease-in-out;
+
+      &:nth-child(even) {
+        left: 50%;
+        border-radius: 0 3px 3px 0;
+      }
+
+      &:nth-child(odd) {
+        left: 0px;
+        border-radius: 3px 0 0 3px;
+      }
+
+      &:nth-child(1),
+      &:nth-child(2) {
+        top: 0px;
+      }
+
+      &:nth-child(3),
+      &:nth-child(4) {
+        top: 9px;
+      }
+
+      &:nth-child(5),
+      &:nth-child(6) {
+        top: 18px;
+      }
+    }
+    &.active span {
+      &:nth-child(1),
+      &:nth-child(6) {
+        transform: rotate(45deg);
+      }
+
+      &:nth-child(2),
+      &:nth-child(5) {
+        transform: rotate(-45deg);
+      }
+
+      &:nth-child(1) {
+        left: 2.5px;
+        top: 3.5px;
+      }
+
+      &:nth-child(2) {
+        left: calc(50% - 2.5px);
+        top: 3.5px;
+      }
+
+      &:nth-child(3) {
+        left: -50%;
+        opacity: 0;
+      }
+
+      &:nth-child(4) {
+        left: 100%;
+        opacity: 0;
+      }
+
+      &:nth-child(5) {
+        left: 2.5px;
+        top: 14.5px;
+      }
+
+      &:nth-child(6) {
+        left: calc(50% - 2.5px);
+        top: 14.5px;
+      }
+    }
   }
 
   &__list {
-    list-style: none;
-    margin: 0 -20px 0 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
-    justify-content: end;
+    @include unlist(0 (-$gap) 0 0);
+    @include md-min {
+      display: grid !important;
+      grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+      justify-content: end;
+    }
+    @include md {
+      display: none;
+      position: absolute;
+      top: 100%;
+      right: $gap * 2;
+      text-align: right;
+      background-color: rgba($color-gray-dark, 0.9);
+    }
+    &.active{
+      display: block;
+    }
+   
   }
 
   &__item {
-    margin: 0 10px;
+    @include md-min{
+      margin: 0 10px;
+    }
+    @include md{
+      margin: $gap;
+    }
+    
   }
 
   &__link {
@@ -24,10 +133,100 @@
     font-size: 1.125rem;
     letter-spacing: 0.094em;
     transition: color 0.5s;
-  }
 
-  &:hover,
-  &:focus {
-    color: #d66926;
+    &:hover,
+    &:focus {
+      color: $color-accent;
+    }
   }
 }
+
+// hamburger
+
+// .header-navbar__btn {
+//   width: 30px;
+//   height: 22.5px;
+//   position: relative;
+//   margin: 25px auto;
+//   transform: rotate(0deg);
+//   transition: 0.5s ease-in-out;
+//   cursor: pointer;
+// }
+
+// .header-navbar__btn-row  {
+//   display: block;
+//   position: absolute;
+//   height: 3px;
+//   width: 50%;
+//   background: $color-light;
+//   opacity: 1;
+
+//   transform: rotate(0deg);
+
+//   transition: 0.25s ease-in-out;
+// }
+
+// .header-navbar__btn-row:nth-child(even) {
+//   left: 50%;
+//   border-radius: 0 3px 3px 0;
+// }
+
+// .header-navbar__btn-row:nth-child(odd) {
+//   left: 0px;
+//   border-radius: 3px 0 0 3px;
+// }
+
+// .header-navbar__btn-row:nth-child(1),
+// .header-navbar__btn-row:nth-child(2) {
+//   top: 0px;
+// }
+
+// .header-navbar__btn-row:nth-child(3),
+// .header-navbar__btn-row:nth-child(4) {
+//   top: 9px;
+// }
+
+// .header-navbar__btn-row:nth-child(5),
+// .header-navbar__btn-row:nth-child(6) {
+//   top: 18px;
+// }
+
+// .header-navbar__btn.active span:nth-child(1),
+// .header-navbar__btn.active span:nth-child(6) {
+//   transform: rotate(45deg);
+// }
+
+// .header-navbar__btn.active span:nth-child(2),
+// .header-navbar__btn.active span:nth-child(5) {
+//   transform: rotate(-45deg);
+// }
+
+// .header-navbar__btn.active span:nth-child(1) {
+//   left: 2.5px;
+//   top: 3.5px;
+// }
+
+// .header-navbar__btn.active span:nth-child(2) {
+//   left: calc(50% - 2.5px);
+//   top: 3.5px;
+// }
+
+// .header-navbar__btn.active span:nth-child(3) {
+//   left: -50%;
+//   opacity: 0;
+// }
+
+// .header-navbar__btn.active span:nth-child(4) {
+//   left: 100%;
+//   opacity: 0;
+// }
+
+// .header-navbar__btn.active span:nth-child(5) {
+//   left: 2.5px;
+//   top: 14.5px;
+// }
+
+// .header-navbar__btn.active span:nth-child(6) {
+//   left: calc(50% - 2.5px);
+//   top: 14.5px;
+// }
