--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -1,12 +1,15 @@
 .header {
   position: relative;
+
+  display: grid;
+  align-content: center;
+
   min-height: 100vh;
-  color: #ffffff;
-  background-color: #2d3651;
+  padding: 100px 0;
+
+  color: $color-light;
+  background-color: $color-primary;
   // background-image: url(/assets/img/img-header.png);
   background-position: center;
   background-size: cover;
-  padding: 100px 0;
-  display: grid;
-  align-content: center;
 }
