--- a/assets/scss/sections/skills/_skills.scss
+++ b/assets/scss/sections/skills/_skills.scss
@@ -1,21 +1,68 @@
-
 .skills {
-  padding: 10px;
-  margin-bottom: 30px;
+  @include sm-min {
+    margin-bottom: 30px;
+    padding: 10px;
+  }
+  @include sm {
+    padding: 20px;
+  }
+
+
 
   &__container {
     display: grid;
-    grid-template-areas:
-      "art1 art1 art2 art3"
+
+    margin-bottom: 20px;
+
+    gap: 10px;
+    @include lg-min {
+      grid-template-areas: "art1 art1 art2 art3"
       "art4 art5 art5 art6"
       "art7 art8 art9 art6";
-    gap: 10px;
-    margin-bottom: 20px;
+    }
+    @include lg-md {
+      grid-template-areas: "art1 art1 art2"
+      "art3 art4 art4"
+      "art5 art5 art6"
+      "art7 art8 art6"
+      "art7 art9 art9"
+      ;
+    }
+    @include md-sm {
+      grid-template-areas: "art1 art2"
+      "art3 art2"
+      "art4 art4"
+      "art5 art6"
+      "art5 art7"
+      "art8 art9"
+      ;
+    }
+    @include sm {
+      gap: 20px;
+      grid-template-areas: "art1 "
+      "art2 "
+      "art3 "
+      "art4 "
+      "art5 "
+      "art6 "
+      "art7 "
+      "art8 "
+      "art9 "
+      ;
+    }
+
+
+    @media (min-height: 641px) {
+      grid-auto-rows: calc(33.333vh - 40px / 3);
+    }
+
+    @media (max-height: 641px) {
+      grid-auto-rows: 200px;
+    }
   }
-  
+
   &__actions {
     display: flex;
     justify-content: center;
   }
 }
-
