--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -50,7 +50,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  font-size: 1.125em;
   transition: background-color 0.5s;
   letter-spacing: 0.1em;
 
