--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -1,56 +1,67 @@
 .about {
   display: grid;
-  
   background-color: $color-gray-light;
   letter-spacing: 0.055em;
-  @include lg-min{
+  @include lg-min {
     padding: 100px 0 100px 0;
   }
-  @include lg-md{
+  @include lg-md {
     padding: 80px 0 80px 0;
+  }
+  @include md {
+    padding: 60px 0 60px 0;
   }
 
   &__container {
     @extend %container;
     display: grid;
     grid-template-columns: 1fr 271px;
-    @include lg-min{
+    @include lg-min {
       gap: 100px;
     }
-    @include lg-md{
+    @include lg-md {
       gap: 40px;
     }
-    
+    @include md {
+      grid-template-columns: 1fr 236px;
+      gap: 20px;
+    }
   }
 
   &__content {
     h2 {
       font-family: $font-header;
-      
       line-height: 1.18em;
       letter-spacing: 0.1em;
       margin-top: 0;
       color: $color-primary;
-      @include lg-min{
+      @include lg-min {
         margin-bottom: 56px;
         font-size: 2.5rem;
       }
-      @include lg-md{
+      @include lg-md {
         margin-bottom: 42px;
         font-size: 2rem;
+        line-height: 1.2em;
       }
-
-
+      @include md {
+        margin-bottom: 36px;
+        font-size: 1.5rem;
+      }
     }
     p {
-      letter-spacing: 0.049em;
-      
-      
+     
+      @include lg-min {
         font-size: 1.125rem;
+        letter-spacing: 0.049em;
+      }
       
-      @include lg-md{
-        font-size: 1rem;
+      @include lg-md {
         letter-spacing: 0.055em;
+      }
+      @include md {
+        // margin-bottom: 36px;
+        // font-size: 1rem;
       }
 
       &:first-of-type {
@@ -61,20 +72,19 @@
           position: absolute;
           height: 200px;
           width: 2px;
-          background-color:rgba( $color-gray, 0.1);
+          background-color: rgba($color-gray, 0.1);
           top: 0;
-          @include lg-min{
+          @include lg-min {
             right: -50px;
           }
-          @include lg-md{
+          @include lg-md {
             right: -20px;
-            
           }
-         
-
+          @include md {
+            right: -10px;
+          }
         }
       }
-
       &:last-of-type {
         margin: 0;
       }
