--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -974,4 +974,16 @@ a {
     gap: 20px;
     grid-template-areas: "art1 " "art2 " "art3 " "art4 " "art5 " "art6 " "art7 " "art8 " "art9 ";
   }
+  .about__container {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .about__content h2 {
+    margin-bottom: 36px;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  .about__content p:first-of-type::after {
+    display: none;
+  }
 }
