--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,7 @@ template {
 /* sm */
 /* xs */
 /* xx */
-.header-menu__container, .header-content__container, .about__container {
+.header-menu__container, .header-content__container, .about__container, .form__container, .posts__container {
   max-width: 1340px;
   margin: auto;
   padding-right: 20px;
@@ -375,6 +375,23 @@ h1 {
   line-height: 1.2em;
 }
 
+h2 {
+  font-family: "Roboto Slab", serif;
+  line-height: 1.2em;
+  letter-spacing: 0.1em;
+  color: #2d3651;
+}
+
+h3 {
+  letter-spacing: 0.05em;
+  color: #637588;
+  font-size: 1.125rem;
+}
+
+p {
+  color: #637588;
+}
+
 a {
   text-decoration: none;
   color: #ffffff;
@@ -384,6 +401,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -407,7 +425,6 @@ a {
 }
 
 .btn--primary {
-  height: 60px;
   border: 2px solid #2d3651;
   background-color: rgba(45, 54, 81, 0.8);
 }
@@ -748,11 +765,7 @@ a {
 }
 
 .about__content h2 {
-  font-family: "Roboto Slab", serif;
-  line-height: 1.18em;
-  letter-spacing: 0.1em;
   margin-top: 0;
-  color: #2d3651;
 }
 
 .about__content p:first-of-type {
@@ -785,13 +798,211 @@ a {
   max-height: 480px;
 }
 
+.form {
+  background-color: #2d3651;
+  padding: 30px 0;
+}
+
+.form__container {
+  display: grid;
+  gap: 20px;
+}
+
+.form .btn--primary {
+  width: 100%;
+  color: #ffffff;
+  border: 2px solid rgba(45, 54, 81, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.form .btn--primary:hover, .form .btn--primary:focus {
+  cursor: pointer;
+  border-color: #ffffff;
+  background-color: #d66926;
+}
+
+.form-item__input {
+  display: block;
+  width: 100%;
+  height: 60px;
+  padding-left: 30px;
+  -webkit-transition: background-color 0.5s, border-color 0.5s;
+  -o-transition: background-color 0.5s, border-color 0.5s;
+  transition: background-color 0.5s, border-color 0.5s;
+  letter-spacing: 0.15em;
+  color: #ffffff;
+  border: 2px solid rgba(45, 54, 81, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.05);
+  font-size: 1.125rem;
+}
+
+.form-item__input::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.form-item__input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.form-item__input:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.form-item__input::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.form-item__input::placeholder {
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.form-item__input:hover, .form-item__input:focus {
+  border-color: rgba(255, 255, 255, 0.15);
+  border-bottom-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.form-item__input:focus-visible {
+  outline-width: 0px;
+}
+
+.posts {
+  padding: 100px 0;
+}
+
+.posts h2 {
+  margin-bottom: 56px;
+  font-size: 2.5rem;
+}
+
+.posts__grid {
+  display: grid;
+  grid-template-areas: "p1 p1 p2 p3" "p4 p5 p6 p6";
+  grid-template-columns: repeat(4, 1fr);
+  padding-bottom: 20px;
+  gap: 20px;
+}
+
+.post-item {
+  -webkit-transition: background-color 0.7s;
+  -o-transition: background-color 0.7s;
+  transition: background-color 0.7s;
+}
+
+.post-item:hover {
+  background-color: #d8d8d8;
+}
+
+.post-item:hover .post-item__image img {
+  background-color: #d8d8d8;
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.post-item:hover .post-item__text p, .post-item:hover h3 {
+  color: #2d3651 !important;
+}
+
+.post-item__link {
+  text-align: center;
+  display: grid;
+  height: 100%;
+  grid-template-rows: 300px 1fr;
+}
+
+.post-item__image {
+  background-color: #2d3651;
+  overflow: hidden;
+}
+
+.post-item__image img {
+  width: 100%;
+  background-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.post-item__text {
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 20px;
+}
+
+.post-item__text h3 {
+  font-family: "Roboto Slab", serif;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+.post-item__text p {
+  letter-spacing: 0;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+.posts__action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.posts__action .btn--primary {
+  min-width: 350px;
+}
+
+.post-item:nth-of-type(1) {
+  grid-area: p1;
+}
+
+.post-item:nth-of-type(2) {
+  grid-area: p2;
+}
+
+.post-item:nth-of-type(3) {
+  grid-area: p3;
+}
+
+.post-item:nth-of-type(4) {
+  grid-area: p4;
+}
+
+.post-item:nth-of-type(5) {
+  grid-area: p5;
+}
+
+.post-item:nth-of-type(6) {
+  grid-area: p6;
+}
+
 @media (min-width: 576px) {
-  .btn--primary {
-    min-width: 350px;
-  }
   .skills {
     margin-bottom: 30px;
     padding: 10px;
+  }
+  .skills__actions {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .skills__actions .btn--primary {
+    min-width: 350px;
   }
 }
 
@@ -818,6 +1029,9 @@ a {
   }
   .skill-item__title {
     font-size: 1.25rem;
+  }
+  .form__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -879,7 +1093,6 @@ a {
   .about__content h2 {
     margin-bottom: 42px;
     font-size: 2rem;
-    line-height: 1.2em;
   }
   .about__content p {
     letter-spacing: 0.055em;
@@ -946,6 +1159,19 @@ a {
   .skills__container {
     grid-template-areas: "art1 art2" "art3 art2" "art4 art4" "art5 art6" "art5 art7" "art8 art9";
   }
+  .form__container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "f1 f1" "f2 f3";
+  }
+  .form-item:nth-of-type(1) {
+    grid-area: f1;
+  }
+  .form-item:nth-of-type(2) {
+    grid-area: f2;
+  }
+  .form-item:nth-of-type(3) {
+    grid-area: f3;
+  }
 }
 
 @media (max-height: 641px) {
@@ -955,9 +1181,6 @@ a {
 }
 
 @media (max-width: 575.8px) {
-  .btn--primary {
-    width: 100%;
-  }
   .header-content__actions {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -974,14 +1197,15 @@ a {
     gap: 20px;
     grid-template-areas: "art1 " "art2 " "art3 " "art4 " "art5 " "art6 " "art7 " "art8 " "art9 ";
   }
+  .skills__actions .btn--primary {
+    width: 100%;
+  }
   .about__container {
     grid-template-columns: 1fr;
     gap: 20px;
   }
   .about__content h2 {
-    margin-bottom: 36px;
     text-align: center;
-    font-size: 1.5rem;
   }
   .about__content p:first-of-type::after {
     display: none;
