--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -23,31 +23,42 @@ h1 {
   @include lg-min {
     font-size: 3.75rem;
   }
-  // @media (min-height: $lg) {
-  //   font-size: 3.75rem;
-  // }
+  
   @include lg-md {
     font-size: 2.5rem;
   }
-  // @media (max-width: $lg - 0.2) and(min-width: $md) {
-  //   font-size: 2.5rem;
-  // }
+ 
   @include md {
     font-size: 1.875rem;
   }
-  // @media (max-width: $md - 0.2) {
-  //   font-size: 1.875rem;
-  // }
+}
+
+h2 {
+  font-family: $font-header;
+  line-height: 1.2em;
+  letter-spacing: 0.1em;
+  color: $color-primary;
+}
+
+h3 {
+  
+  letter-spacing: 0.05em;
+  color: #637588;
+  font-size: 1.125rem;
+}
+
+p{
+  color: $color-gray;
 }
 
 a {
   text-decoration: none;
-
   color: $color-light;
 }
 
 .btn {
   display: flex;
+  height: 60px;
   align-items: center;
   justify-content: center;
   font-size: 1.125em;
@@ -84,17 +95,8 @@ a {
   }
 
   &--primary {
-    height: 60px;
-
     border: 2px solid $color-primary;
     background-color: rgba($color-primary, 0.8);
 
-    @include sm-min {
-      min-width: 350px;
-    }
-    @include sm {
-      width: 100%;
-      // min-width: auto;
-    }
   }
 }
