--- a/assets/scss/sections/skills/_skills.scss
+++ b/assets/scss/sections/skills/_skills.scss
@@ -7,50 +7,46 @@
     padding: 20px;
   }
 
-
-
   &__container {
     display: grid;
-
     margin-bottom: 20px;
-
     gap: 10px;
     @include lg-min {
-      grid-template-areas: "art1 art1 art2 art3"
-      "art4 art5 art5 art6"
-      "art7 art8 art9 art6";
+      grid-template-areas:
+        "art1 art1 art2 art3"
+        "art4 art5 art5 art6"
+        "art7 art8 art9 art6";
     }
     @include lg-md {
-      grid-template-areas: "art1 art1 art2"
-      "art3 art4 art4"
-      "art5 art5 art6"
-      "art7 art8 art6"
-      "art7 art9 art9"
-      ;
+      grid-template-areas:
+        "art1 art1 art2"
+        "art3 art4 art4"
+        "art5 art5 art6"
+        "art7 art8 art6"
+        "art7 art9 art9";
     }
     @include md-sm {
-      grid-template-areas: "art1 art2"
-      "art3 art2"
-      "art4 art4"
-      "art5 art6"
-      "art5 art7"
-      "art8 art9"
-      ;
+      grid-template-areas:
+        "art1 art2"
+        "art3 art2"
+        "art4 art4"
+        "art5 art6"
+        "art5 art7"
+        "art8 art9";
     }
     @include sm {
       gap: 20px;
-      grid-template-areas: "art1 "
-      "art2 "
-      "art3 "
-      "art4 "
-      "art5 "
-      "art6 "
-      "art7 "
-      "art8 "
-      "art9 "
-      ;
+      grid-template-areas:
+        "art1 "
+        "art2 "
+        "art3 "
+        "art4 "
+        "art5 "
+        "art6 "
+        "art7 "
+        "art8 "
+        "art9 ";
     }
-
 
     @media (min-height: 641px) {
       grid-auto-rows: calc(33.333vh - 40px / 3);
@@ -64,5 +60,18 @@
   &__actions {
     display: flex;
     justify-content: center;
+    @include sm-min {
+      display: flex;
+      justify-content: center;
+      .btn--primary {
+        min-width: 350px;
+      }
+    }
+    @include sm {
+      .btn--primary{
+        width: 100%;
+      }
+      
+    }
   }
 }
