--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -4,9 +4,11 @@
   top: 0;
   right: 0;
   left: 0;
-  @include md{
-    background-color:rgba($color-gray-dark, 0.25) ;
-  }
+  @include md {
+    background-color: rgba($color-gray-dark, 0.25);
+    box-shadow: -3px 3px 20px -10px black;
+}
+
   
 
   &__container {
@@ -18,9 +20,7 @@
   }
 }
 
-
-
 // TODO: переделать через экстенд
 
 // .header-menu__container,
-// .header-content__container 
+// .header-content__container
