--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -1,21 +1,71 @@
 .posts {
-  padding: 100px 0;
+  @include lg-min {
+    padding: 100px 0;
+  }
+  @include lg-md {
+    padding: 80px 0 80px;
+  }
+  @include md {
+    padding: 60px 0 60px;
+  }
+
   &__container {
     @extend %container;
   }
   h2 {
-    margin-bottom: 56px;
-    font-size: 2.5rem;
+    margin-top: 0;
+    @include lg-min {
+      margin-bottom: 56px;
+      font-size: 2.5rem;
+    }
+    @include lg-md {
+      margin-bottom: 42px;
+      font-size: 2rem;
+    }
+    @include md {
+      margin-bottom: 36px;
+      font-size: 1.5rem;
+    }
+    @include sm {
+      text-align: center;
+    }
   }
 
   &__grid {
     display: grid;
-    grid-template-areas:
-      "p1 p1 p2 p3"
-      "p4 p5 p6 p6";
-    grid-template-columns: repeat(4, 1fr);
     padding-bottom: 20px;
     gap: 20px;
+    @include lg-min {
+      grid-template-areas:
+        "p1 p1 p2 p3"
+        "p4 p5 p6 p6";
+      grid-template-columns: repeat(4, 1fr);
+    }
+    @include lg-md {
+      grid-template-areas:
+        "p1 p1 p2"
+        "p3 p4 p4"
+        "p5 p5 p6";
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @include md-sm {
+      grid-template-areas:
+        "p1 p2"
+        "p3 p4"
+        "p5 p6";
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include sm {
+      grid-template-areas:
+        "p1"
+        "p2"
+        "p3"
+        "p4"
+        "p5"
+        "p6"
+        ;
+      grid-template-columns:1fr;
+    }
   }
 }
 .post-item {
@@ -27,7 +77,8 @@
       background-color: #d8d8d8;
       transform: scale(1.1);
     }
-    .post-item__text p, h3{
+    .post-item__text p,
+    h3 {
       color: $color-primary !important;
     }
   }
@@ -41,6 +92,9 @@
   &__image {
     background-color: $color-primary;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     img {
       width: 100%;
       background-position: center;
@@ -65,18 +119,22 @@
   }
 }
 
-.posts__action{
+.posts__action {
   display: flex;
   justify-content: center;
   .btn--primary {
     min-width: 350px;
+    @include sm{
+  width: 100%;
+    }
   }
-}
 
+
+
+}
 
 @for $i from 1 through 6 {
   .post-item:nth-of-type(#{$i}) {
     grid-area: p#{$i};
   }
 }
-
