--- a/assets/scss/sections/skills/_skills.scss
+++ b/assets/scss/sections/skills/_skills.scss
@@ -1,7 +1,6 @@
 .skills {
   @include sm-min {
-    margin-bottom: 30px;
-    padding: 10px;
+    padding: 10px 10px 40px;
   }
   @include sm {
     padding: 20px;
@@ -52,10 +51,10 @@
       grid-auto-rows: calc(33.333vh - 40px / 3);
     }
 
-    @media (max-height: 641px) {
-      grid-auto-rows: 200px;
-    }
+    @media (max-height: 690px) {
+    grid-auto-rows: calc(230px - 20px * 0.66666);
   }
+ }
 
   &__actions {
     display: flex;
@@ -71,7 +70,7 @@
       .btn--primary{
         width: 100%;
       }
-      
     }
   }
 }
+
