--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -25,8 +25,8 @@
     &:hover,
     &:focus {
       cursor: pointer;
-      border-color: #ffffff;
-      background-color: #d66926;
+      border-color:$color-light;
+      background-color: $color-accent;
     }
   }
 }
@@ -36,21 +36,22 @@
     width: 100%;
     height: 60px;
     padding-left: 30px;
-    transition: background-color 0.5s, border-color 0.5s;
+    
     letter-spacing: 0.15em;
     color: $color-light;
     border: 2px solid rgba($color-primary, 0);
     border-bottom-color: rgba($color-light, 0.25);
     background-color: rgba($color-light, 0.05);
     font-size: 1.125rem;
+    transition: background-color 0.5s, border-color 0.5s;
     &::placeholder {
       color: rgba($color-light, 0.25);
     }
     &:hover,
     &:focus {
-      border-color: rgba(255, 255, 255, 0.15);
-      border-bottom-color: #ffffff;
-      background-color: rgba(255, 255, 255, 0.15);
+      border-color: rgba($color-light, 0.15);
+      border-bottom-color: $color-light;
+      background-color: rgba($color-light, 0.15);
     }
     &:focus-visible {
       outline-width: 0px;
@@ -67,5 +68,4 @@
     grid-area: f3;
   }
 }
-  
 }
