--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -5,6 +5,7 @@
 html {
   overflow-y: scroll;
   // letter-spacing: 0.1em;
+
   color: $color-gray;
 
   font-family: $font-main;
@@ -21,47 +22,52 @@ h1 {
   @include lg-min {
     font-size: 3.75rem;
   }
-  
   @include lg-md {
     font-size: 2.5rem;
   }
- 
   @include md {
     font-size: 1.875rem;
   }
 }
 
 h2 {
+  letter-spacing: 0.1em;
+
+  color: $color-primary;
+
   font-family: $font-header;
   line-height: 1.2em;
-  letter-spacing: 0.1em;
-  color: $color-primary;
 }
 
 h3 {
-  
   letter-spacing: 0.05em;
-  color: #637588;
+
+  color: $color-gray;
+
   font-size: 1.125rem;
 }
 
-p{
+p {
   color: $color-gray;
 }
 
 a {
   text-decoration: none;
+
   color: $color-light;
 }
 
 .btn {
   display: flex;
-  height: 60px;
   align-items: center;
   justify-content: center;
-  font-size: 1.125em;
+
+  height: 60px;
+
   transition: background-color 0.5s;
   letter-spacing: 0.1em;
+
+  font-size: 1.125em;
 
   &:hover,
   &:focus {
@@ -87,6 +93,7 @@ a {
     @include md {
       min-width: 170px;
       height: 40px;
+
       letter-spacing: 0.05em;
 
       font-size: 1rem;
@@ -96,6 +103,5 @@ a {
   &--primary {
     border: 2px solid $color-primary;
     background-color: rgba($color-primary, 0.8);
-
   }
 }
