--- a/assets/scss/header/_header-navbar.scss
+++ b/assets/scss/header/_header-navbar.scss
@@ -1,46 +1,54 @@
 .header-navbar {
-  
   letter-spacing: 0.1em;
+
   @include md {
     display: flex;
     justify-content: flex-end;
   }
   &__btn {
+    position: relative;
+
+    width: 30px;
+    height: 22.5px;
+    margin: 20px 0;
+
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+    transform: rotate(0deg);
+
     @include md-min {
       display: none;
     }
 
-    width: 30px;
-    height: 22.5px;
-    position: relative;
-    margin: 20px 0;
-    transform: rotate(0deg);
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-
     &-row {
-      display: block;
       position: absolute;
-      height: 3px;
+
+      display: block;
+
       width: 50%;
-      background: $color-light;
-      opacity: 1;
-      transform: rotate(0deg);
+      height: 3px;
+
       transition: 0.25s ease-in-out;
+      transform: rotate(0deg);
+
+      opacity: 1;
+      background: $color-light;
 
       &:nth-child(even) {
         left: 50%;
+
         border-radius: 0 3px 3px 0;
       }
 
       &:nth-child(odd) {
-        left: 0px;
+        left: 0;
+
         border-radius: 3px 0 0 3px;
       }
 
       &:nth-child(1),
       &:nth-child(2) {
-        top: 0px;
+        top: 0;
       }
 
       &:nth-child(3),
@@ -65,33 +73,35 @@
       }
 
       &:nth-child(1) {
-        left: 2.5px;
         top: 3.5px;
+        left: 2.5px;
       }
 
       &:nth-child(2) {
-        left: calc(50% - 2.5px);
         top: 3.5px;
+        left: calc(50% - 2.5px);
       }
 
       &:nth-child(3) {
         left: -50%;
+
         opacity: 0;
       }
 
       &:nth-child(4) {
         left: 100%;
+
         opacity: 0;
       }
 
       &:nth-child(5) {
-        left: 2.5px;
         top: 14.5px;
+        left: 2.5px;
       }
 
       &:nth-child(6) {
-        left: calc(50% - 2.5px);
         top: 14.5px;
+        left: calc(50% - 2.5px);
       }
     }
   }
@@ -100,15 +110,19 @@
     @include unlist(0 (-$gap) 0 0);
     @include md-min {
       display: grid !important;
-      grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
       justify-content: end;
+
+      grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
     }
     @include md {
-      display: none;
       position: absolute;
       top: 100%;
       right: $gap * 2;
+
+      display: none;
+
       text-align: right;
+
       background-color: rgba($color-gray-dark, 0.9);
     }
     &.active {
@@ -127,9 +141,12 @@
 
   &__link {
     display: block;
+
     padding: 10px;
-    font-size: 1.125rem;
+
     transition: color 0.5s;
+
+    font-size: 1.125rem;
 
     &:hover,
     &:focus {
