--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -1,22 +1,24 @@
 .form {
-  background-color: $color-primary;
   padding: 30px 0;
+
+  background-color: $color-primary;
   &__container {
-    @extend %container;
     display: grid;
+
+    @extend %container;
     gap: $gap;
-    @include md-min{
+    @include md-min {
       grid-template-columns: repeat(3, 1fr);
     }
-    @include md-sm{
-      grid-template-columns: repeat(2, 1fr);
+    @include md-sm {
       grid-template-areas: "f1 f1" "f2 f3";
+      grid-template-columns: repeat(2, 1fr);
     }
-    
   }
 
   .btn--primary {
     width: 100%;
+
     color: $color-light;
     border: 2px solid rgba($color-primary, 0);
     border-bottom-color: rgba($color-light, 0.25);
@@ -25,25 +27,40 @@
     &:hover,
     &:focus {
       cursor: pointer;
-      border-color:$color-light;
+
+      border-color: $color-light;
       background-color: $color-accent;
     }
   }
 }
 .form-item {
+  @include md-sm {
+    &:nth-of-type(1) {
+      grid-area: f1;
+    }
+    &:nth-of-type(2) {
+      grid-area: f2;
+    }
+    &:nth-of-type(3) {
+      grid-area: f3;
+    }
+  }
   &__input {
     display: block;
+
     width: 100%;
     height: 60px;
     padding-left: 30px;
-    
+
+    transition: background-color 0.5s, border-color 0.5s;
     letter-spacing: 0.15em;
+
     color: $color-light;
     border: 2px solid rgba($color-primary, 0);
     border-bottom-color: rgba($color-light, 0.25);
     background-color: rgba($color-light, 0.05);
+
     font-size: 1.125rem;
-    transition: background-color 0.5s, border-color 0.5s;
     &::placeholder {
       color: rgba($color-light, 0.25);
     }
@@ -54,18 +71,7 @@
       background-color: rgba($color-light, 0.15);
     }
     &:focus-visible {
-      outline-width: 0px;
+      outline-width: 0;
     }
   }
-@include md-sm{
-  &:nth-of-type(1){
-    grid-area: f1;
-  }
-  &:nth-of-type(2){
-    grid-area: f2;
-  }
-  &:nth-of-type(3){
-    grid-area: f3;
-  }
-}
 }
