--- a/assets/scss/sections/skills/_skills.scss
+++ b/assets/scss/sections/skills/_skills.scss
@@ -8,43 +8,41 @@
 
   &__container {
     display: grid;
+
     margin-bottom: $gap;
+
     gap: 10px;
     @include lg-min {
-      grid-template-areas:
-        "art1 art1 art2 art3"
-        "art4 art5 art5 art6"
-        "art7 art8 art9 art6";
+      grid-template-areas: "art1 art1 art2 art3"
+      "art4 art5 art5 art6"
+      "art7 art8 art9 art6";
     }
     @include lg-md {
-      grid-template-areas:
-        "art1 art1 art2"
-        "art3 art4 art4"
-        "art5 art5 art6"
-        "art7 art8 art6"
-        "art7 art9 art9";
+      grid-template-areas: "art1 art1 art2"
+      "art3 art4 art4"
+      "art5 art5 art6"
+      "art7 art8 art6"
+      "art7 art9 art9";
     }
     @include md-sm {
-      grid-template-areas:
-        "art1 art2"
-        "art3 art2"
-        "art4 art4"
-        "art5 art6"
-        "art5 art7"
-        "art8 art9";
+      grid-template-areas: "art1 art2"
+      "art3 art2"
+      "art4 art4"
+      "art5 art6"
+      "art5 art7"
+      "art8 art9";
     }
     @include sm {
       gap: 20px;
-      grid-template-areas:
-        "art1 "
-        "art2 "
-        "art3 "
-        "art4 "
-        "art5 "
-        "art6 "
-        "art7 "
-        "art8 "
-        "art9 ";
+      grid-template-areas: "art1 "
+      "art2 "
+      "art3 "
+      "art4 "
+      "art5 "
+      "art6 "
+      "art7 "
+      "art8 "
+      "art9 ";
     }
 
     @media (min-height: 641px) {
@@ -52,13 +50,14 @@
     }
 
     @media (max-height: 690px) {
-    grid-auto-rows: calc(230px - 20px * 0.66666);
+      grid-auto-rows: calc(230px - 20px * 0.66666);
+    }
   }
- }
 
   &__actions {
     display: flex;
     justify-content: center;
+
     @include sm-min {
       display: flex;
       justify-content: center;
@@ -67,7 +66,7 @@
       }
     }
     @include sm {
-      .btn--primary{
+      .btn--primary {
         width: 100%;
       }
     }
