--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -42,43 +42,44 @@
 
     gap: 20px;
     @include lg-min {
-      grid-template-areas: "p1 p1 p2 p3"
-      "p4 p5 p6 p6";
+      grid-template-areas:
+        "p1 p1 p2 p3"
+        "p4 p5 p6 p6";
       grid-template-columns: repeat(4, 1fr);
     }
     @include lg-md {
-      grid-template-areas: "p1 p1 p2"
-      "p3 p4 p4"
-      "p5 p5 p6";
+      grid-template-areas:
+        "p1 p1 p2"
+        "p3 p4 p4"
+        "p5 p5 p6";
       grid-template-columns: repeat(3, 1fr);
     }
     @include md-sm {
-      grid-template-areas: "p1 p2"
-      "p3 p4"
-      "p5 p6";
+      grid-template-areas:
+        "p1 p2"
+        "p3 p4"
+        "p5 p6";
       grid-template-columns: repeat(2, 1fr);
     }
     @include sm {
-      grid-template-areas: "p1"
-      "p2"
-      "p3"
-      "p4"
-      "p5"
-      "p6"
+      grid-template-areas:
+        "p1"
+        "p2"
+        "p3"
+        "p4"
+        "p5"
+        "p6";
       grid-template-columns: 1fr;
-      ;
     }
   }
 }
 .post-item {
+  background-color: lighten($color-gray-light, 5%);
   transition: background-color 0.7s;
   &:hover {
-    background-color: #d8d8d8;
-
+    background-color: darken($color-gray-light, 5%);
     .post-item__image img {
       transform: scale(1.1);
-
-      background-color: #d8d8d8;
     }
     .post-item__text p,
     h3 {
